<resources>
    <string name="app_name">EindhovenGo</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="help">\?</string>
    <string name="username">Username or Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="exit">X</string>
    <string name="needhelp">Need help?</string>
    <string name="notAMember"><u>Not a part of the explorer\'s guild? Sign up!</u></string>
    <string name="alreadyAdventurer"><u>Already an adventurer? Log-in here!</u></string>

    <!-- Help Text-->
    <string name="helptext">
        - Starting a game:\nTo start a new game, select an objective from the list of objectives
        with your desired location, number of points and difficulty and hit the Select button.
        \n
        \nThe difficulty of each objective can be viewed on the map depending on the size of the circle
        surrounding it. The higher the difficulty, the closer to the objective you have to be.
        \n\n\n
        - Logging out:\nHad enough of EindhovenGo for now? Open up the main menu, pull out the drawer
        and under the Other options you will find the Logout button.
        \n\n\n
        - About the app:\nThis app has been created as part of a Design Based Learning course on the Eindhoven University
        of Technology, created by group 2019-Q3-2IS70-Group01, consisting of: \n
        Danielle Gillam \n
        Martijn van Andel \n
        Joey Lensen \n
        Andrei Roncea \n
        Sergiu Drugă \n
        Alexandru Matei \n
        \n© 2020 TUe/Eindhoven University of Technology


    </string>

    <!--Achievement Strings-->
    <string name="getStarted">Get Started:\n\nAdd a profile picture</string>
    <string name="theExplorer">The Explorer:\n\nFind 1 objectivee</string>
    <string name="thePoints">The Points:\n\nObtain 10 points</string>
    <string name="theHelper">The Helper:\n\nPurchase a hint</string>


    <!-- Strings for the gsettings activity -->
    <string name="gsettings_difficulty">Difficulty</string>
    <string name="gsettings_hints">Hints</string>
    <string name="gsettings_quit">Quit</string>
    <string name="gsettings_itemButton">Buy</string>
    <string name="gsettings_current_objective">Current Objective</string>
    <string name="gsettings_abandon_mission">Abandon Mission</string>
    <string name="gsettings_quitmission">Click here to quit your current mission.</string>

    <!-- Strings for drawer navigation -->
    <!-- TODO replace ambiguous strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">♦ </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_achievements">Achievements</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>

    <string name="main_maintext">Welcome </string>
    <string name="main_maintext2">! \nChoose your next location to start.</string>

    <!-- Strings for drawer navigation -->
    <string name="username1">Username: \n</string>
    <string name="points">Points: \n</string>


    <string-array name="achievements">
        <item>Milestone 1: reach 100 points</item>
        <item>Milestone 2: reach 500 points</item>
        <item>Milestone 3: reach 800 points</item>
        <item>Milestone 4: reach 1000 points</item>
        <item>Milestone 5: reach 15000 points</item>
        <!--<item>The Engineer</item>
        <item>Get started</item>
        <item>To the moon and back</item>
        <item>The traveller</item>-->
    </string-array>

    <string-array name="points">
        <item>100 points</item>
        <item>100 points</item>
        <item>100 points</item>
        <item>100 points</item>
        <item>100 points</item>
        <!--<item>500 points</item>
        <item>100 points</item>
        <item>600 points</item>
        <item>1000 points</item>-->
    </string-array>

    <string-array name="description">
        <item> Reach 100 points on this account</item>
        <item> Reach 500 points on this account</item>
        <item> Reach 800 points on this account</item>
        <item> Reach 1000 points on this account</item>
        <item> Reach 1500 points on this account</item>
        <!--<item> Find Flux building in the TU/e campus</item>
        <item>Find the first objective on the map</item>
        <item>Find Luna building </item>
        <item>Find 5 objectives on the map</item> -->
    </string-array>

    <string-array name="locked">
        <item>Locked</item>
        <item>Locked</item>
        <item>Locked</item>
        <item>Locked</item>
        <item>Locked</item>
        <!--<item>Locked</item>
        <item>Locked</item>
        <item>Locked</item>
        <item>Locked</item> -->
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_toSettings">Loading game settings</string>
    <string name="gsettings_itemButtonLocation">Select</string>
    <string name="diff_zero">Too easy</string>
    <string name="diff_one">Easy</string>
    <string name="diff_two">Medium</string>
    <string name="diff_three">Hard</string>
    <string name="diff_morethanthree">Extremely hard</string>
    <string name="menu_toHelp">Help requested</string>
    <string name="emailaddress">"Email: "</string>
</resources>
