<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:padding="5dp"
    tools:context=".AboutActivity">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="29dp"
        android:layout_height="32dp"
        android:background="@drawable/btn_shape"
        android:text="@string/exit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/needhelp"
        android:textColor="@color/darkGreen"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="16dp"
        android:text="@string/helptext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="291dp"
            android:layout_height="373dp"
            android:text="@string/helptext"
            android:textColor="@color/darkGreen"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="57dp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>